# Parallax

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: run_tests.yml
cotix/: .gitignore  CONTRIBUTING.md  __init__.py  _abstract_shapes.py  _bodies.py  _colliders.py  _collision_resolution.py  _collision_solver.py  _collisions.py  _constraint_solvers.py  _constraints.py  _contacts.py  _controls.py  _convex_shapes.py  _design_by_contract.py  _environment.py  _envs.py  _geometry_utils.py  _gjk.py  _lunar_lander.py  _physics_solvers.py  _robocup.py  _shapes.py  _universal_shape.py  _utils.py  _visualizer_tools.py  _viz.py  _worlds.py
examples/: test_viz.py
test/: __init__.py  requirements.txt  test_bodies.py  test_circle_circle.py  test_collider.py  test_collision_resolution.py  test_collisions.py  test_design_by_contract.py  test_env.py  test_geometry_utils.py  test_gjk.py  test_jaxtyping_hook.py  test_physics_solvers.py  test_pytest.py  test_shapes.py  test_viz.py
test/test/: test_pytest.py
