[project]
name = "cotix"
version = "0.0.1alpha"
description = "Continuous-time, differentiable reinforcement-learning environments with JAX"
readme = "README.md"
requires-python ="~=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Roman Knyazhitskiy", email = "contact@knyaz.tech"},
]
keywords = ["jax", "reinforcement-learning", ]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
urls = {repository = "https://github.com/DelftMercurians/cotix" }
dependencies = ["beartype>=0.16.3", "typing_extensions>=3.7.4.1", "jax>=0.4.18", "jaxlib>=0.4.18", "jaxtyping>=0.2.23", "equinox>=0.11.1", "pytest-check>=2.2.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["cotix/*"]

[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E721", "E731", "F722"]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = false
